"Server" link and "Audit Trail Serial" display correctly on "Android" devcie and Ipad device but we are still facing this issue with "Landscape" mode on "IOS" device displaying Left to Right alignment "Server" link and "Audit Trail Serial" on "Signing" and "Signed" page

--- a/assets/css/rtl-basic-mobile.css
+++ b/assets/css/rtl-basic-mobile.css
@@ -706,6 +706,15 @@ table.responsive-table td:nth-child(1), table.responsive-table td:nth-child(2) {
     .col.left.rtl-signature-certificate {
         width: 70%;
     }
+
+    .blog-url.pdf-blog-url {
+        float: right ;
+    }
+    .audit-signature.pull-right {
+        float: left !important;
+        margin-left: 5px !important;
+        margin-right: 0px !important;
+    }   
    
 }
 
